# mcumgr-client-rs

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml
mcumgr-smp/: Cargo.toml
mcumgr-smp/src/: application_management.rs  flash.rs  high_level_functions.rs  lib.rs  shell_management.rs  smp.rs
mcumgr-smp/src/test/: deployment.rs
mcumgr-smp/src/transport/: error.rs  mod.rs
mcumgr-smp/src/transport/smp/: smp_async.rs  smp_sync.rs
mcumgr-smp/src/transport/udp/: udp_async.rs  udp_sync.rs
smp-tool/: Cargo.toml
smp-tool/src/: client.rs  error.rs  lib.rs  main.rs  server.rs
smp-tool/src/ops/: img_grp.rs  mod.rs  os_grp.rs  shell_grp.rs
smp-tool/tests/: common.rs  deployment.rs  devices.json  rollback.rs
