[package]
name = "smp-tool"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sascha Zenglein <zenglein@gessler.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcumgr-smp = {path = "../mcumgr-smp", features = ["transport-udp"]}

clap = {version = "4.5", features = ["derive"]}
reedline = "0.33"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.10"
tokio = {version = "1.40", features = ["macros", "net", "rt"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
hex = "0.4.3"
anyhow = "1.0.100"
assert_cmd = "2.1.1"
cargo-bin = "0.3.0"
predicates = "3.1.3"
serde_json = "1.0.145"
indicatif = "0.18.3"
